ASSERT in WebCore::StyleProperties::getGridTemplateValue https://bugs.webkit.org/show_bug.cgi?id=240172

Reviewed by Dean Jackson.

Update StyleProperties::getGridTemplateValue with a more thorough check
as it is currently only checking the grid:none/grid:initial special keyword.

* css/StyleProperties.cpp:
(WebCore::StyleProperties::getGridTemplateValue const):

Canonical link: https://commits.webkit.org/250364@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293916 268f45cc-cd09-0410-ab3c-d52691b4dbfc